--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <div class="score"></div>
+    <div class="score">Round 1</div>
     <div id="sund-gameboard">
 
     </div>
-    <script src="scripts.js"></script>
     <script src="scripts-visual.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
