--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
     </div>
     <script src="scripts-visual.js"></script>
-    <script src="scripts.js"></script>
+    <!-- <script src="scripts.js"></script> -->
 </body>
 </html>
