--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
+    <div class="sund-screen__order"></div>
     <div class="score">Round 1</div>
     <div id="sund-gameboard">
 
     </div>
-    <!-- <script src="scripts-visual.js"></script> -->
-    <script src="scripts.js"></script>
+    <script src="scripts-visual.js"></script>
+    <!-- <script src="scripts.js"></script> -->
 </body>
 </html>
