--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="sund-gameboard">
 
     </div>
-    <script src="scripts-visual.js"></script>
-    <!-- <script src="scripts.js"></script> -->
+    <!-- <script src="scripts-visual.js"></script> -->
+    <script src="scripts.js"></script>
 </body>
 </html>
