--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body> 
     <div class="sund-screen__order"></div>
-    <div class="score">Round 1</div>
+    <div class="score">Round <span id="round">1</span> <br>
+        <span id="player1-score">0</span>
+        <span id="player2-score">0</span>
+    </div>
     <div id="sund-gameboard">
 
     </div>
