--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body> 
     <div class="sund-screen__order"></div>
-    <div class="score">Round <span id="round">1</span> <br>
-        <span id="player1-score">0</span>
-        <span id="player2-score">0</span>
+    <div class="score">Round <span id="round">1</span> 
+        <div>
+            <span id="player1-name"></span>
+            <span id="player1-score">0</span>
+        </div>
+        <div>
+            <span id="player2-name"></span>
+            <span id="player2-score">0</span>
+        </div>
     </div>
     <div id="sund-gameboard">
 
