--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <div class="sund-screen__order"></div>
-    <div class="score">Round <span id="round">1</span> 
+    <div class="round">
+        Round  <span id="round">1</span> 
+    </div>
+    <div class="sund-players">
         <div>
             <span id="player1-name"></span>
             <span id="player1-score">0</span>
@@ -18,6 +20,7 @@
             <span id="player2-score">0</span>
         </div>
     </div>
+    <div class="sund-screen__order"></div>
     <div id="sund-gameboard">
 
     </div>
