--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <div class="round">
+    <div class="sund-round">
         Round  <span id="round">1</span> 
     </div>
     <div class="sund-players">
